修正前端架构：移除Supabase直连，改为通过后端API获取数据
- 前端移除Supabase环境变量，改为NEXT_PUBLIC_API_URL配置
- 移除前端pg依赖，前端不再直连数据库
- 创建frontend/app/lib/utils/api.ts封装API调用
- 更新docker-compose.yml前端配置
- 数据库文件移至backend/database目录
- 前端构建测试通过

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-      - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:3000}
+      - NEXT_PUBLIC_API_URL=http://backend:3001
+      - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
     depends_on:
       - backend
     restart: unless-stopped
@@ -29,7 +28,7 @@ services:
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - JWT_SECRET=${JWT_SECRET}
-      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:3000}
+      - FRONTEND_URL=${FRONTEND_URL}
     restart: unless-stopped
 
 networks:
