--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,5 @@
-# Database
-# DATABASE_URL="postgresql://username:password@localhost:5432/siteframe?schema=public"
-
-# Supabase (if using Supabase)
-DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
-NEXT_PUBLIC_SUPABASE_URL="https://[YOUR-PROJECT-REF].supabase.co"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="[YOUR-ANON-KEY]"
-SUPABASE_SERVICE_ROLE_KEY="[YOUR-SERVICE-ROLE-KEY]"
+# Backend API
+NEXT_PUBLIC_API_URL="http://localhost:3001"
 
 # Next.js
 NEXTAUTH_URL="http://localhost:3000"
