--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -5,13 +5,12 @@
 # 生成密钥工具：openssl rand -base64 32
 
 # ===========================================
-# 数据库配置 (Supabase)
+# 数据库配置
 # ===========================================
-# 从 Supabase 项目设置 > API 获取
-DATABASE_URL="postgresql://postgres:[YOUR_PASSWORD]@db.[YOUR_PROJECT_ID].supabase.co:5432/postgres"
-NEXT_PUBLIC_SUPABASE_URL="https://[YOUR_PROJECT_ID].supabase.co"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="[YOUR_ANON_KEY]"
-SUPABASE_SERVICE_ROLE_KEY="[YOUR_SERVICE_ROLE_KEY]"
+# 配置后端API地址
+NEXT_PUBLIC_API_URL="http://localhost:3001"
+# 如果使用PostgreSQL数据库，请配置以下连接信息
+# DATABASE_URL="postgresql://username:password@localhost:5432/siteframe"
 
 # ===========================================
 # Next.js 配置
@@ -29,9 +28,9 @@ APP_ENV="production"
 # ===========================================
 # 文件上传配置
 # ===========================================
-# 如果使用 Supabase Storage
-NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET="uploads"
-# 如果使用其他存储服务，请相应配置
+# 本地文件上传目录
+UPLOAD_DIR="./public/uploads"
+NEXT_PUBLIC_MAX_FILE_SIZE="5242880" # 5MB
 
 # ===========================================
 # 邮件配置 (生产环境推荐)
