--- a/.env.production
+++ b/.env.production
@@ -1,14 +1,11 @@
 # 生产环境配置文件
 # 请根据实际情况修改以下配置
 
-# Supabase 配置
-SUPABASE_URL=https://your-project-ref.supabase.co
-SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+# 后端 API 配置
+API_URL=http://localhost:3001
 
-# 前端配置
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+# 前端 API 配置
+NEXT_PUBLIC_API_URL=http://localhost:3001
 NEXT_PUBLIC_APP_URL=https://your-domain.com
 
 # 后端配置
