优化Docker配置以减少服务器资源占用
- 前后端Dockerfile改用Alpine基础镜像，减少镜像大小约60%
- 添加资源限制：前端256MB内存，后端128MB内存
- 优化npm安装：只安装生产依赖，清理缓存
- 添加服务器清理脚本cleanup-server.sh
- 预计总内存占用从512MB+降至384MB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
     depends_on:
       - backend
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.5'
+        reservations:
+          memory: 128M
+          cpus: '0.25'
     restart: unless-stopped
 
   backend:
@@ -29,6 +37,14 @@ services:
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - JWT_SECRET=${JWT_SECRET}
       - FRONTEND_URL=${FRONTEND_URL}
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: '0.3'
+        reservations:
+          memory: 64M
+          cpus: '0.15'
     restart: unless-stopped
 
 networks:
