--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# 基础镜像 - 使用Alpine减少镜像大小
 FROM node:18-alpine AS base
 
 # 安装依赖阶段
@@ -7,9 +8,9 @@ WORKDIR /app
 
 # 复制package文件
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --only=production --no-audit --no-fund
 
-# 构建阶段
+# 构建阶段 - 使用Alpine减少镜像大小
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
@@ -18,7 +19,7 @@ COPY . .
 # 构建应用
 RUN npm run build
 
-# 生产运行阶段
+# 生产运行阶段 - 使用Alpine减少镜像大小
 FROM base AS runner
 WORKDIR /app
 
